# ha-emerald

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
custom_components/emerald/: __init__.py  api.py  config_flow.py  const.py  coordinator.py  device.py  hws.py  ihd.py  manifest.json  sensor.py  strings.json  water_heater.py
custom_components/emerald/translations/: en.json
tests/: conftest.py  test_config_flow.py  test_ea_snapshot.py  test_ihd_resilience.py  test_ihd_seed.py
